<resources>
    <string name="app_name">WeekPlan</string>
    <string name="rus">Русский язык</string>
    <string name="eng">Английский язык</string>
    <string name="planName">Название</string>
    <string name="planDate">Дата </string>
    <string name="planTime">Время </string>
    <string name="Description">Описание</string>
    <string name="planAdd">Добавить</string>
    <string name="add">Список дел обновлен</string>
    <string name="task_added_successfully">Задача добавлена успешно</string>
    <string name="error_adding_task">Ошибка при добавлении задачи</string>
    <string name="save">Сохранить</string>
    <string name="close">Закрыть</string>
    <string name="edit">Задача сохранена успешно</string>

</resources>