<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

                <EditText
                    android:id="@+id/etNoteName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/planName"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/planDate"
                    android:inputType="date"/>

                <EditText
                    android:id="@+id/etTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/planTime"
                    android:inputType="time"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Description"
                    android:inputType="text"/>

                <Button
                    android:id="@+id/btnAddNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/planAdd"
                    android:layout_centerInParent="true"
                    android:onClick="openAddNotePage"
                    android:textSize="18sp"/>

        </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
